--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
+    "@types/react-icons": "^2.2.7",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.533.0",
     "next": "15.4.4",
     "react": "19.1.0",
